--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,25 +2,22 @@ server.port=8094
 
 spring.application.name=foodSharingg
 
-
-
-
-
 spring.datasource.url=jdbc:mysql://localhost:3306/food_sharing_db
-spring.datasource.username=root
+spring.datasource.username=kriti
 spring.datasource.password=Kr@ti.123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
+# H2 settings commented out
+# spring.h2.console.enabled=true
+# spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-spring.h2.console.enabled=true
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
-
 spring.main.allow-bean-definition-overriding=true
-
 
 # Security properties
 jwt.secret=YourSecretKeyForJWTGeneration
 
-
+# Logging properties for better debugging
+logging.level.org.springframework=DEBUG
+logging.level.com.foodSharingg=DEBUG 
